schemas addition in progress

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "landau-front",
+  "name": "cent-front",
   "version": "1.0.0",
-  "description": "vuejs landau-front",
+  "description": "vuejs cent-front",
   "author": "netvix team",
   "private": true,
   "scripts": {
@@ -19,12 +19,13 @@
     "expose-loader": "^0.7.3",
     "lodash": "^4.17.4",
     "vue": "^2.4.2",
-    "vue-json-schema": "^1.1.0",
+    "vue-form-generator": "^2.1.1",
     "vue-lodash": "^1.0.4",
     "vue-modal-dialog": "^0.2.2",
     "vue-moment": "^2.0.2",
     "vue-router": "^2.7.0",
     "vue-transmit": "^6.0.1",
+    "vue-yandex-maps": "^0.5.7",
     "vue2-filters": "^0.2.1",
     "vuetify": "^0.16",
     "vuex": "^2.4.0",
