starting adding validation

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "lodash": "^4.17.4",
+    "vee-validate": "^2.0.0-rc.27",
     "vue": "^2.5",
     "vue-form-generator": "^2.1.1",
     "vue-lodash": "^1.0.4",
