--- a/.babelrc
+++ b/.babelrc
@@ -8,19 +8,5 @@
     }],
     "stage-2"
   ],
-  "plugins": [
-    "transform-runtime",
-    "add-filehash",
-    ["transform-imports", {
-        "vuetify": {
-            "transform": "vuetify/src/components/${member}"
-        }
-    }]
-  ],
-  "env": {
-    "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["istanbul"]
-    }
-  }
+  "plugins": ["transform-vue-jsx", "transform-runtime"]
 }
