--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vue": "^2.5.16",
     "vue-charts": "^0.2.1",
     "vue-eslint-parser": "^2.0.3",
-    "vue-form-generator": "^2.2.1",
+    "vue-form-generator": "^2.2.2",
     "vue-lodash": "^1.0.4",
     "vue-modal-dialog": "^0.2.2",
     "vue-moment": "^3.2.0",
@@ -31,7 +31,7 @@
     "vue-transmit": "^8.1.1",
     "vue-yandex-maps": "^0.7.8",
     "vue2-filters": "^0.3.0",
-    "vuetify": "^1.0.11",
+    "vuetify": "1.1.0-beta.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.1"
   },
