--- a/package.json
+++ b/package.json
@@ -13,48 +13,47 @@
   "dependencies": {
     "axios": "^0.18.0",
     "css-loader": "^0.28.11",
-    "eslint-plugin-vue": "^4.3.0",
-    "lodash": "^4.17.5",
-    "lodash-webpack-plugin": "^0.11.4",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.7",
-    "vee-validate": "^2.0.6",
+    "eslint-plugin-vue": "^4.5.0",
+    "lodash": "^4.17.10",
+    "lodash-webpack-plugin": "^0.11.5",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "vee-validate": "^2.0.9",
     "vue": "^2.5.16",
-    "vue-charts": "^0.2.1",
     "vue-eslint-parser": "^2.0.3",
     "vue-form-generator": "^2.2.2",
-    "vue-lodash": "^1.0.4",
+    "vue-lodash": "^2.0.0",
     "vue-modal-dialog": "^0.2.2",
-    "vue-moment": "^3.2.0",
+    "vue-moment": "^4.0.0-0",
     "vue-router": "^3.0.1",
-    "vue-style-loader": "^4.0.2",
-    "vue-transmit": "^8.1.1",
-    "vue-yandex-maps": "^0.7.8",
+    "vue-style-loader": "^4.1.0",
+    "vue-transmit": "^8.1.4",
+    "vue-yandex-maps": "^0.7.9",
     "vue2-filters": "^0.3.0",
     "vuetify": "1.1.0-beta.0",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.1"
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "autoprefixer": "^8.1.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "autoprefixer": "^8.5.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "chalk": "^2.3.2",
+    "chalk": "^2.4.1",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
-    "eslint": "^4.19.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
-    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-friendly-formatter": "^4.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.2",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
@@ -75,7 +74,6 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
